tests/ui/pattern/deref-patterns/typeck_fail.stderr
error[E0308]: mismatched types
  --> $DIR/typeck_fail.rs:8:9
   |
LL |     match "foo".to_string() {
   |           ----------------- this expression has type `String`
LL |         "foo" => {}
   |         ^^^^^ expected `String`, found `&str`

error[E0308]: mismatched types
  --> $DIR/typeck_fail.rs:13:9
   |
LL |     match &"foo".to_string() {
   |           ------------------ this expression has type `&String`
LL |         "foo" => {}
   |         ^^^^^ expected `&String`, found `&str`
   |
   = note: expected reference `&String`
              found reference `&'static str`

error[E0308]: mismatched types
  --> $DIR/typeck_fail.rs:20:9
   |
LL |     match Some(0) {
   |           ------- this expression has type `Option<{integer}>`
LL |         Ok(0) => {}
   |         ^^^^^ expected `Option<{integer}>`, found `Result<_, _>`
   |
   = note: expected enum `Option<{integer}>`
              found enum `Result<_, _>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
